# swagger.yml
@@ -1112,6 +1112,43 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
           description: 500 Internal Server Error Response
+  /api/v1/provider/{slug}/album:
+    get:
+      operationId: getAblumByProviderSlug
+      tags:
+        - Provider
+      description: Get Provider by slug or id
+      summary: Get Provider by slug or id
+      parameters:
+        - name: slug
+          in: path
+          schema:
+            type: string
+          required: true
+        - name: limit
+          in: query
+          schema: *ref_1
+          description: |2-
+
+                    Example : limit=50
+                            : limit=unlimited
+                
+        - name: page
+          in: query
+          schema: *ref_2
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AlbumPagingResponse'
+          description: Provider success
+        '500':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: 500 Internal Server Error Response
   /api/v1/provider/{slug}:
     get:
       operationId: getProviderBySlug
@@ -2258,6 +2295,50 @@ components:
         - voiceUrl
         - description
       description: User registor become provider
+    DetailAlbumResponse:
+      type: object
+      properties:
+        createdAt:
+          type: date
+          description: Created At
+          example: '2023-05-10T07:08:46.083Z'
+        updatedAt:
+          type: date
+          description: Update At
+          example: '2023-05-10T07:08:46.083Z'
+        deletedAt:
+          type: date
+          description: Deleted At
+        url:
+          type: string
+          description: Url
+          example: https://picsum.photos/seed/Xj1jIyR1U/640/480
+        postId:
+          type: string
+          description: Id's post
+          example: a1da9857-355e-43f1-8fdb-26a8a0ace6bd
+      required:
+        - url
+        - postId
+      description: DetailAlbum response
+    AlbumPagingResponse:
+      type: object
+      properties:
+        row:
+          type: array
+          description: Row
+          items:
+            $ref: '#/components/schemas/DetailAlbumResponse'
+        count:
+          type: number
+          description: Count
+          example: 100
+        pagination:
+          type: STRING
+          description: Pagination
+          $ref: '#/components/schemas/PaginationResponse'
+      required: []
+      description: Album paging response
     BecomeProviderResponse:
       type: object
       properties:
